--- a/styles.css
+++ b/styles.css
@@ -448,7 +448,7 @@
   right: 0;
   width: 3px;
   height: 24px;
-  background-color: #253069;
+  background-color:#fff;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   transform: translate3d(0, -50%, 0) scale(1, 1) rotate(10deg);
@@ -1092,7 +1092,7 @@
   position: relative;
   overflow: hidden;
   height: 90vh;
-  background: #253069;
+  background:#fff;
   background-size: cover
 }
 
@@ -1157,7 +1157,7 @@
   height: 100%;
   top: 0%;
   left: 0%;
-  color: #253069
+  color:#fff
 }
 
 .hero-blog .hero-blog-tag a:after {
@@ -1174,7 +1174,7 @@
   height: 100%;
   top: -100%;
   left: 0%;
-  color: #253069
+  color:#fff
 }
 
 .hero-blog .hero-blog-tag a:hover:before {
@@ -1633,7 +1633,7 @@
   #footer-newsletter:before {
     content: "";
     display: block;
-    background-color: #253069;
+    background-color:#fff;
     position: absolute;
     bottom: 0;
     z-index: -1;
@@ -2155,7 +2155,7 @@
 }
 .project .wrapped-heading {
   position: relative;
-  
+
 }
 
 .project .wrapped-heading h2 {
@@ -5170,11 +5170,11 @@ video {
 }
 
 .allpro {
-  color: #144E9B
+  color: #fff
 }
 
 .allpro .live-link a {
-  color: #144E9B
+  color: #fff
 }
 
 .allpro .live-link a:after {
@@ -5184,7 +5184,7 @@ video {
 }
 
 .allpro .live-link a span {
-  background-color: #144E9B;
+  background-color: #fff;
   opacity: .25
 }
 
@@ -5193,7 +5193,7 @@ video {
 }
 
 .allpro .slidenav:before {
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro .link-mask i {
@@ -5219,15 +5219,15 @@ video {
 }
 
 .allpro .lSSlideOuter .lSPager.lSpg>li.active a, .allpro .lSSlideOuter .lSPager.lSpg>li:hover a, .allpro .lSSlideOuter .lSPager.lSpg>li a {
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro .lSSlideOuter .lSPager.lSpg>li.active a:before, .allpro .lSSlideOuter .lSPager.lSpg>li:hover a:before, .allpro .lSSlideOuter .lSPager.lSpg>li a:before {
-  border: 1px solid #144E9B
+  border: 1px solid #fff
 }
 
 .allpro h1 {
-  color: #144E9B
+  color: #fff
 }
 
 .allpro .paragraph-title {
@@ -5237,7 +5237,7 @@ video {
 }
 
 .allpro .live-link a:before {
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro .text-link {
@@ -5249,15 +5249,15 @@ video {
 }
 
 .allpro .logo {
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro .contact-icon {
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro h1, .allpro h2, .allpro h3, .allpro h4 {
-  color: #144E9B
+  color: #fff
 }
 
 .allpro h1 span, .allpro h2 span, .allpro h3 span, .allpro h4 span {
@@ -5266,7 +5266,7 @@ video {
 }
 
 .allpro .mc-chicken span {
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro .mc-chicken.opened span {
@@ -5293,7 +5293,7 @@ video {
 .allpro .lSAction>a {
   -webkit-box-shadow: none;
   box-shadow: none;
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro .lSAction>a:before {
@@ -5305,7 +5305,7 @@ video {
 }
 
 .allpro .btn-play:before {
-  background-color: #144E9B
+  background-color: #fff
 }
 
 .allpro .btn-play:after {
@@ -5367,7 +5367,7 @@ video {
   -webkit-animation-direction: alternate;
   -o-animation-direction: alternate;
   -moz-animation-direction: alternate;
-  color: #144E9B
+  color: #fff
 }
 
 .allpro .rotating-circle .circle-content {
@@ -7731,13 +7731,13 @@ section.main-type .small {
 }
 
 .step-number strong {
-  color: #253069
+  color:#fff
 }
 
 .start-project {
   display: block;
   font-size: 5em;
-  color: #253069
+  color:#fff
 }
 
 .step {
@@ -7844,33 +7844,33 @@ section.main-type .small {
   margin: 0 0 1em;
   font-size: .75em;
   font-family: "Lato", "Open Sans", sans-serif;
-  color: #253069;
+  color:#fff;
   padding: 0 2em;
   border: 1px solid #fff
 }
 
 .text-input ::-webkit-input-placeholder {
-  color: #253069;
+  color:#fff;
   opacity: 1
 }
 
 .text-input :-ms-input-placeholder {
-  color: #253069;
+  color:#fff;
   opacity: 1
 }
 
 .text-input ::-ms-input-placeholder {
-  color: #253069;
+  color:#fff;
   opacity: 1
 }
 
 .text-input ::placeholder {
-  color: #253069;
+  color:#fff;
   opacity: 1
 }
 
 .text-input :-ms-input-placeholder {
-  color: #253069
+  color:#fff
 }
 
 textarea {
@@ -7885,7 +7885,7 @@ textarea {
   background-color: #EBECF1;
   font-size: .75em;
   font-family: "Lato", "Open Sans", sans-serif;
-  color: #253069;
+  color:#fff;
   padding: 2em;
   border: none
 }
@@ -7901,7 +7901,7 @@ input:focus, textarea:focus {
   -ms-transform: scale(1.025);
   -webkit-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.06);
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.06);
-  color: #253069
+  color:#fff
 }
 
 .submit-button-wrap {
@@ -7972,7 +7972,7 @@ p.section-caption {
 .slider-input {
   background-color: transparent;
   font-size: 2.0833em;
-  color: #253069;
+  color:#fff;
   text-align: center;
   margin: 0;
   padding: 0;
@@ -7992,7 +7992,7 @@ p.section-caption {
   -ms-transform: none;
   -webkit-box-shadow: none;
   box-shadow: none;
-  color: #253069
+  color:#fff
 }
 
 /*! nouislider - 11.1.0 - 2018-04-02 11:18:13 */
@@ -8489,7 +8489,7 @@ html:not([dir=rtl]) .noUi-horizontal .noUi-handle {
 }
 
 #footer {
-  background-color: #253069;
+  background-color:#fff;
   width: 100%;
   padding: 120px 0
 }
@@ -8656,7 +8656,7 @@ html {
 
 body {
   margin: 0;
- 
+
 }
 
 a {
@@ -10096,7 +10096,7 @@ body {
   font-family: 'Manrope', sans-serif;
   font-size: 1.25em;
   line-height: 1.66em;
-  color: #253069;
+  color:#fff;
   position: relative;
   overflow-x: hidden;
   background-color: #231F20;
@@ -10193,7 +10193,7 @@ a.text-link:before {
   position: absolute;
   width: 0%;
   height: 2px;
-  background-color: #253069;
+  background-color:#fff;
   bottom: 0;
   left: 0
 }
@@ -10225,7 +10225,7 @@ a.text-link:hover:before {
   display: block;
   width: 2px;
   height: 90px;
-  background-color: #253069
+  background-color:#fff
 }
 
 .scroll-line span:nth-of-type(2) {
@@ -10244,7 +10244,7 @@ a.text-link:hover:before {
   display: block;
   width: 2px;
   height: 90px;
-  background-color: #253069
+  background-color:#fff
 }
 
 @-webkit-keyframes scrollLine {
@@ -10569,7 +10569,7 @@ p {
 
 a {
   outline: 0;
-  color: #253069;
+  color:#fff;
   text-decoration: none
 }
 
@@ -11313,15 +11313,15 @@ header .header-description {
 }
 
 #awards .lSSlideOuter .lSPager.lSpg>li.active a, #awards .lSSlideOuter .lSPager.lSpg>li:hover a, #awards .lSSlideOuter .lSPager.lSpg>li a {
-  background-color: #253069
+  background-color:#fff
 }
 
 #awards .lSSlideOuter .lSPager.lSpg>li.active a:before, #awards .lSSlideOuter .lSPager.lSpg>li:hover a:before, #awards .lSSlideOuter .lSPager.lSpg>li a:before {
-  border: 1px solid #253069
+  border: 1px solid#fff
 }
 
 #awards .lSAction>a {
-  background-color: #253069
+  background-color:#fff
 }
 
 #awards .lSAction>a:before {
@@ -11355,7 +11355,7 @@ header .header-description {
   font-weight: 400;
   position: relative;
   color: #fff;
-  background: #253069 url("../img/img-bridge.png") no-repeat 0% 75%;
+  background:#fff url("../img/img-bridge.png") no-repeat 0% 75%;
   background-size: 100%
 }
 
@@ -11401,7 +11401,7 @@ header .header-description {
   top: -40vh;
   width: 100%;
   height: 130vh;
-  background-color: #253069;
+  background-color:#fff;
   transform: skewY(-7deg);
   -moz-transform: skewY(-7deg);
   -webkit-transform: skewY(-7deg);
@@ -11669,7 +11669,7 @@ header .header-description {
   display: block;
   width: 105%;
   height: 20px;
-  background-color: #253069
+  background-color:#fff
 }
 
 #wip {
@@ -11815,7 +11815,7 @@ header .header-description {
   -webkit-transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
   -moz-transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
   -o-transition: all 350ms cubic-bezier(0.77, 0, 0.175, 1);
-  background-color: #253069;
+  background-color:#fff;
   position: relative;
   line-height: 1em
 }
@@ -11832,7 +11832,7 @@ header .header-description {
 #wip .buzz-item {
   position: relative;
   line-height: 0.01em;
-  background-color: #253069
+  background-color:#fff
 }
 
 #wip video {
@@ -11896,7 +11896,7 @@ header .header-description {
 }
 
 #wip .wip-icon.icon-buzzworthy {
-  background-color: #253069;
+  background-color:#fff;
   background-image: url("../img/_svg/social-buzzworthy.svg");
   background-size: 50% 50%
 }
@@ -11945,7 +11945,7 @@ header .header-description {
   top: 250px;
   width: 100%;
   height: 100%;
-  background-color: #253069;
+  background-color:#fff;
   transform: skewY(-7deg);
   -moz-transform: skewY(-7deg);
   -webkit-transform: skewY(-7deg);
@@ -12323,7 +12323,7 @@ header .header-description {
 
   #studio-intro p {
     font-size: 1.5em;
-    color: #253069
+    color:#fff
   }
 
   a.bs-button {
@@ -12765,7 +12765,7 @@ header .header-description {
     height: 100%;
     width: 100%;
     z-index: -1;
-    background-color: #253069
+    background-color:#fff
   }
 
   .portfolio-wrapper .portfolio-item-img img {
@@ -12908,7 +12908,7 @@ header .header-description {
     -webkit-transition: all 650ms cubic-bezier(0.295, 0.94, 0.455, 1);
     -moz-transition: all 650ms cubic-bezier(0.295, 0.94, 0.455, 1);
     -o-transition: all 650ms cubic-bezier(0.295, 0.94, 0.455, 1);
-    fill: #253069
+    fill:#fff
   }
 
   #clients li:hover svg {
@@ -12960,7 +12960,7 @@ header .header-description {
 
   #studio-intro p {
     font-size: 1.5em;
-    color: #253069
+    color:#fff
   }
 
   .loading #loader .loader-logo {
@@ -13044,7 +13044,7 @@ header .header-description {
     left: 50%;
     right: 0;
     bottom: 0;
-    background-color: #253069;
+    background-color:#fff;
     z-index: -1
   }
 
@@ -13763,7 +13763,7 @@ header .header-description {
     display: block;
     width: 0%;
     height: 20px;
-    background-color: #253069
+    background-color:#fff
   }
 
   #bottom-work a:hover:before {
@@ -13936,7 +13936,7 @@ header .header-description {
   }
 
   #culture {
-    background-color: #253069;
+    background-color:#fff;
     position: relative
   }
 
@@ -14018,7 +14018,7 @@ header .header-description {
 
   #studio-intro p {
     font-size: 1.6em;
-    color: #253069
+    color:#fff
   }
 
   #team .team-name {
